--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "apexcharts": "^5.3.5",
     "chart.js": "^4.5.0",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "papaparse": "^5.5.3",
+    "pdf-lib": "^1.17.1",
     "react": "19.1.0",
     "react-apexcharts": "^1.7.0",
     "react-chartjs-2": "^5.3.0",
